clusters/main/kubernetes/system/longhorn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    traefik.io/router.middlewares: traefik-chain-basic@kubernetescrd
spec:
  parentRefs:
    - name: traefik
      sectionName: websecure
      kind: Gateway

  hostnames:
    - longhorn.${DOMAIN_0}

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
