clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
      cert-manager.io/cluster-issuer: cloudflared
      cert-manager.io/private-key-rotation-policy: Always
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
  - host: longhorn.${DOMAIN_0}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
    - hosts:
      - longhorn.${BASE_DOMAIN}
      secretName: longhorn-tls-0
status:
  loadBalancer:
    ingress:
    - ip: ${TRAEFIK_IP}
